# OOP-Project

./: .gitignore  CLI.cpp  CMakeLists.txt  Commodity.cpp  Commodity.h  Crypto.cpp  Crypto.h  DigitalCommodities.cpp  DigitalCommodities.h  Game.cpp  Game.h  Gems.cpp  Gems.h  Harvest.cpp  Harvest.h  MEMORY_LEAK_ANALYSIS.md  Makefile  PhysicalCommodities.cpp  PhysicalCommodities.h  README.md  a  count  game  main.cpp  priceTesting.cpp  savegame.txt  test_leaks.sh  trading_game
game.dSYM/Contents/Resources/DWARF/: game
libs/matplot_install/lib/cmake/Matplot++/: Matplot++Config.cmake  Matplot++Targets.cmake
trading_game.dSYM/Contents/: Info.plist
trading_game.dSYM/Contents/Resources/DWARF/: trading_game
trading_game.dSYM/Contents/Resources/Relocations/aarch64/: trading_game.yml
